Bug 14779 - Winbind should not start if the socket path is too long
Summary: Winbind should not start if the socket path is too long
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: Winbind (show other bugs)
Version: 4.14.4
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-03 09:57 UTC by Andreas Schneider
Modified: 2021-08-26 09:25 UTC (History)
5 users (show)

See Also:


Attachments
patch for 4.15 (1.76 KB, patch)
2021-08-04 09:00 UTC, Andreas Schneider
no flags Details
patch for 4.15 (4.37 KB, patch)
2021-08-05 07:28 UTC, Andreas Schneider
abartlet: review+
Details
additional patch for 4.15 (960 bytes, patch)
2021-08-17 15:07 UTC, Andreas Schneider
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andreas Schneider 2021-08-03 09:57:08 UTC
Winbind should not start if the socket path is too long.
Comment 1 Samba QA Contact 2021-08-03 20:36:04 UTC
This bug was referenced in samba master:

aab5cc95e224fef0efafeb1c37a4eb414aee65a0
000f389d09ec9e9906d5e2a0aa317c471c5f5b96
Comment 2 Andreas Schneider 2021-08-04 09:00:45 UTC
Created attachment 16714 [details]
patch for 4.15
Comment 3 Andrew Bartlett 2021-08-04 09:06:05 UTC
Comment on attachment 16714 [details]
patch for 4.15

Unless the autobuild changes are included it won't be possible to do a trail autobuild on sn-devel for 4.15 for some usernames.
Comment 4 Andrew Bartlett 2021-08-04 09:11:55 UTC
Comment on attachment 16714 [details]
patch for 4.15

(removing - on ci-passed)

Ideally this would be pushed back for a gitlab CI run with the additional patch I asked for, but as is it is at least an improvement in reporting.
Comment 5 Andreas Schneider 2021-08-05 07:28:05 UTC
Created attachment 16717 [details]
patch for 4.15
Comment 6 Andrew Bartlett 2021-08-05 07:50:13 UTC
Assigning to Jule for the next 4.15 release candidate
Comment 7 Samba QA Contact 2021-08-06 15:40:20 UTC
This bug was referenced in samba v4-15-test:

f2b2ecec7fc848ce474771ea5a7dcfad08ff392e
047cbaad5d9fa4bc6d901fece9a284de4f991fb3
Comment 8 Jule Anger 2021-08-09 11:42:42 UTC
Closing out bug report.

Thanks!
Comment 9 Samba QA Contact 2021-08-09 13:45:16 UTC
This bug was referenced in samba v4-15-stable:

f2b2ecec7fc848ce474771ea5a7dcfad08ff392e
047cbaad5d9fa4bc6d901fece9a284de4f991fb3
Comment 10 Samba QA Contact 2021-08-12 20:09:03 UTC
This bug was referenced in samba master:

25941a1f97229ef27ee5ac7cc6bc9e7a300fcca0
Comment 11 Andreas Schneider 2021-08-17 15:07:19 UTC
Created attachment 16741 [details]
additional patch for 4.15
Comment 12 Andreas Schneider 2021-08-20 04:50:49 UTC
Jule, please add the additional patch to 4.15 too. Thanks!
Comment 13 Jule Anger 2021-08-25 08:50:59 UTC
Additional patch pushed to autobuild-v4-15-test.
Comment 14 Samba QA Contact 2021-08-25 14:58:06 UTC
This bug was referenced in samba v4-15-test:

4745b8e8a1bcbdfb485bfb91e39834cebfcb62bd
Comment 15 Jule Anger 2021-08-26 06:50:18 UTC
Closing out bug report.

Thanks!
Comment 16 Samba QA Contact 2021-08-26 09:25:36 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.0rc3):

4745b8e8a1bcbdfb485bfb91e39834cebfcb62bd